feat: added imageOverlay and refined gallery

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 <use href="./images/icons.svg#arrow-bottom"></use>
                             </svg>
                         </a>
-                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-1.png" alt="Modern Garden Arrangement">
+                        <!-- <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-1.png" alt="Modern Garden Arrangement">
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-2.png" alt="Modern Garden Arrangement">
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-3.png" alt="Modern Garden Arrangement">
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-4.png" alt="Modern Garden Arrangement">
@@ -240,7 +240,11 @@
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-6.png" alt="Modern Garden Arrangement">
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-7.png" alt="Modern Garden Arrangement">
                         <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-8.png" alt="Modern Garden Arrangement">
-                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-9.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-9.png" alt="Modern Garden Arrangement"> -->
+                    </div>
+                    <div id="modal" class="modal hidden fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-75 z-10">
+                        <!-- <span class="close absolute top-2 right-2 text-white text-xl cursor-pointer">&times;</span> -->
+                        <img id="modal-image" class="modal-content fixed max-w-full max-h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2">
                     </div>
                 </div>
             </section>
@@ -319,6 +323,13 @@
         <script type="module" src="/scripts/dropdownMenu.js"></script>
         <script type="module" src="/scripts/searchInput.js"></script>
         <script type="module" src="/scripts/gallery.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.js"
+            integrity="sha512-BhE5J0LlN4PNea87xXSa65zUFN2eAiZaO2Dybd5bCUyoNAFphxpG6A5DwCD3RV0iqjqMpuXVzmbAML76ofjeyA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script type="module" src="/scripts/simpleLightbox.js"></script>
         <!-- <script type="module" src="./scripts/autoSwitchSlides.js"></script> -->
     </body>
 </html>
