--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+        <script type="module" src="/scripts/imageOverlay.js"></script>
         <!-- <script type="module" src="./scripts/autoSwitchSlides.js"></script> -->
     </body>
 </html>
