--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
                                 <use href="./images/icons.svg#arrow-bottom"></use>
                             </svg>
                         </a>
+                        <!-- <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-1.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-2.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-3.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-4.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-5.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-6.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-7.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-8.png" alt="Modern Garden Arrangement">
+                        <img class="w-full sm_xl:w-[451px] grid-item inline-block mb-6 sm_xl:mb-10 mxAuto" src="./images/projects-9.png" alt="Modern Garden Arrangement"> -->
                     </div>
                     <div id="modal" class="modal hidden fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-75 z-10">
                         <!-- <span class="close absolute top-2 right-2 text-white text-xl cursor-pointer">&times;</span> -->
