--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                                     src="./images/giarddesign.png"
                                     alt="logo"
                                     class=""
+                                    loading="lazy"
                                 >
                             </a>
                             <div class="items-center justify-between sm:justify-end w-full flex">
@@ -108,13 +109,28 @@
                         <div class="bg-[#F5F0EC] absolute bottom-0 right-0 w-[30%] h-[60px] lg:h-[100px] z-10 hidden sm_xl:block"></div>
                         <div class="slider" data-slider>
                             <div class="slide-container" slide>
-                                <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
+                                <img
+                                    class="w-full"
+                                    src="./images/garden-arrangement.png"
+                                    alt="Modern Garden Arrangement"
+                                    loading="lazy"
+                                >
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement-2.png" alt="Modern Garden Arrangement">
+                                <img
+                                    class="w-full"
+                                    src="./images/garden-arrangement-2.png"
+                                    alt="Modern Garden Arrangement"
+                                    loading="lazy"
+                                >
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement-3.png" alt="Modern Garden Arrangement">
+                                <img
+                                    class="w-full"
+                                    src="./images/garden-arrangement-3.png"
+                                    alt="Modern Garden Arrangement"
+                                    loading="lazy"
+                                >
                             </div>
                             <!-- Add more slide containers here -->
                         </div>
@@ -194,7 +210,12 @@
             <section>
                 <div class="relative px-6 sm_xl:pr-0 sm_xl:pl-0 py-8 sm_xl:py-0 sm_xl:flex sm_xl:items-center bg-[#DCC1AB]">
                     <div class="relative sm_xl:w-[50%] mb-6 sm_xl:mb-0">
-                        <img class="w-full" src="./images/made-with-passion.png" alt="Modern Garden Arrangement">
+                        <img
+                            class="w-full"
+                            src="./images/made-with-passion.png"
+                            alt="Modern Garden Arrangement"
+                            loading="lazy"
+                        >
                     </div>
                     <div class="sm_xl:pl-16 lg:pl-[89px] sm_xl:py-8 md:py-10 lg:py-12 sm_xl:pb-8 sm_xl:mr-12 lg:mr-16 sm_xl:w-[50%] text-secondary">
                         <h1 class="font-montserrat text-3xl md:text-5xl lg:text-6xl mb-10 sm:mr-9 md:mr-11">
@@ -244,7 +265,7 @@
                     </div>
                     <div id="modal" class="modal hidden fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-75 z-10">
                         <!-- <span class="close absolute top-2 right-2 text-white text-xl cursor-pointer">&times;</span> -->
-                        <img id="modal-image" class="modal-content fixed max-w-full max-h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2">
+                        <img id="modal-image" class="modal-content fixed max-w-full max-h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2" loading="lazy">
                     </div>
                 </div>
             </section>
