fix: finished gallery

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i&nbsp;wcielimy w&nbsp;życie, a&nbsp;na&nbsp;każdym etapie posłużymy radą i&nbsp;wieloletnim doświadczeniem.
                         </p>
                     </div>
-                    <div class="sm:max-w-[440px] sm:mx-auto sm_xl:max-w-full sm_xl:flex">
+                    <div id="about-us" class="sm:max-w-[440px] sm:mx-auto sm_xl:max-w-full sm_xl:flex -translate-x-[80%]">
                         <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-5 lg:mr-12 xl:mr-16 hover:shadow-subtleGray hover:scale-[1.02] transition-transform">
                             <div class="bg-left-top bg-[url('./images/pencil-icon.png')] bg-no-repeat pt-12">
                                 <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Projekty</h3>
@@ -246,7 +246,7 @@
                         </h2>
                     </div>
                     <div id="masonry-container" class="grid grid-cols-3 items-center justify-center mx-auto text-center mxAuto grid-rows-masonry relative pb-16">
-                        <div class="orange-gradient w-full h-full absolute"></div>
+                        <div class="orange-gradient w-full h-[70%] absolute bottom-0"></div>
                         <a id="expandButton" class="bg-transparent border-solid border-2 border-black rounded-3xl outline-none py-3 px-6 flex items-center absolute -translate-y-1/2 -translate-x-1/2 left-[50%] bottom-[6%] hover:text-white hover:border-white hover:scale-[1.02] transition-all active:scale-[1.05] z-10" href="#">
                             Rozwiń
                             <svg class="w-4 h-4 fill-current ml-3">
@@ -295,8 +295,8 @@
         <footer>
             <div class="sm_xl:px-24 md:px-32 lg:px-32 py-8 md:py-[52px] lg:py-20 sm_xl:flex sm_xl:flex-col bg-black text-white px-6 sm_xl:py-10">
                 <div class="md:grid md:grid-cols-7 md:justify-between md:items-start w-full">
-                    <a href="#" class="mb-3 sm_xl:col-span-3">
-                        <svg class="w-[114px] h-5 fill-current animate-wiggle">
+                    <a href="#" class="sm_xl:col-span-3 block mb-5">
+                        <svg class="w-[114px] h-5 fill-current animate-wiggle  ">
                             <use href="./images/icons.svg#giard-logo"></use>
                         </svg>
                     </a>
