fix: arrows for slider on mobile fixed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="relative sm_xl:w-[50%] sm_xl:overflow-hidden translate-x-[20%] opacity-0" data-hero-slider>
                         <div class="bg-[#F5F0EC] absolute bottom-0 right-0 w-[30%] h-[60px] lg:h-[100px] z-10 hidden sm_xl:block"></div>
-                        <div>
+                        <div class="relative">
                             <div class="slide-container" slide>
                                 <img
                                     class="w-full xl:h-[737px]"
@@ -120,15 +120,12 @@
                                     loading="lazy"
                                 >
                             </div>
-                            <!-- Add more slide containers here -->
-                        </div>
-                        <div class="relative z-20">
-                            <button class="absolute left-4 bottom-32 sm:bottom-52 sm_xl:left-auto sm_xl:right-12 md:right-14 sm_xl:bottom-2 lg:bottom-6 lg:right-20 p-2 hover:scale-[1.1] transition-transform lg_xl:right-[108px] xl:right-[120px]" data-prev-slide>
+                            <button class="absolute left-4 -translate-y-2/4 top-[50%] sm_xl:left-auto sm_xl:translate-y-0 sm_xl:top-auto sm_xl:right-12 md:right-14 sm_xl:bottom-2 lg:bottom-6 lg:right-20 p-2 hover:scale-[1.1] transition-transform lg_xl:right-[108px] xl:right-[120px] z-10" data-prev-slide>
                                 <svg class="w-6 h-6">
                                     <use href="./images/icons.svg#arrow-left"></use>
                                 </svg>
                             </button>
-                            <button class="absolute bottom-32 sm:bottom-52 right-4 sm_xl:right-2 md:right-2 lg:right-6 sm_xl:bottom-2 lg:bottom-6 p-2 hover:scale-[1.1] transition-transform lg_xl:right-10 xl:right-12" data-next-slide>
+                            <button class="absolute -translate-y-2/4 top-[50%] sm_xl:translate-y-0 sm_xl:top-auto right-4 sm_xl:right-2 md:right-2 lg:right-6 sm_xl:bottom-2 lg:bottom-6 p-2 hover:scale-[1.1] transition-transform lg_xl:right-10 xl:right-12 z-10" data-next-slide>
                                 <svg class="w-6 h-6">
                                     <use href="./images/icons.svg#arrow-right"></use>
                                 </svg>
